Sat Aug  3 09:08:56 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* examples/AMH/Sink_Server/client.cpp: Fixed warnings from
	  explicit template builds.

Sat Aug  3 08:08:48 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* examples/AMH/Sink_Server/Base_Server.cpp: Fixed a "reaches end
	  of non-void" function warning in g++ builds.

Fri Aug  2 17:44:37 2002  Ossama Othman  <ossama@uci.edu>

	* docs/releasenotes/index.html:

	  Updated security service release notes.

Fri Aug  2 17:27:12 2002  Ossama Othman  <ossama@uci.edu>

	* docs/releasenotes/index.html:

	  Updated load balancer release notes.

Fri Aug  2 16:51:23 2002  Ossama Othman  <ossama@uci.edu>

	* orbsvcs/orbsvcs/PortableGroup/Portable_Group_Map.cpp:

	  Removed all explicit template instantiations for old style
	  ACE_Hash_Map_Manager.  They aren't needed.  This may also
	  address the strange unresolved symbol link-time errors since the
	  old style hash map templates inherit from the "_Ex" versions.

Fri Aug  2 15:13:28 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* docs/configurations.html: Added a documentation entry for the
	  Real-time CORBA thread pool model.

Fri Aug  2 16:17:34 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* orbsvcs/orbsvcs/PortableGroup/Portable_Group_Map.cpp: Added a
	  missing template instantiation. Should fix problems in 

Fri Aug  2 11:35:17 2002  Ossama Othman  <ossama@uci.edu>

	* docs/interceptors.html:

	  Updated CORBA spec URLs.

Fri Aug  2 08:44:19 2002  Priyanka Gontla  <pgontla@ece.uci.edu>

	* orbsvcs/PSS/PSDL_Struct_Visitor.cpp (gen_code_for_si): 
	  Filled in information to the structure that will be
	  generated.

	* orbsvcs/examples/PSS/client.cpp (main): 
	  Fixed the warning in GCC 3.0 build.

Fri Aug  2 07:38:00 2002  Ossama Othman  <ossama@uci.edu>

	* orbsvcs/orbsvcs/LoadBalancing/LB_ServerRequestInterceptor.cpp
	  (receive_request_service_contexts):

	  Parenthesize expression to clarify precedence.
